tests/analyzer/errors/data/math.rv
struct Vec2 {
    x: int,
    y: int,
}

fn introduce() {
    print "This is a mathematical module"
}

fn getVecFromPos(x: int, y: int) -> Vec2 {
    return Vec2{ x, y }
}
